[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["Igor Mandrik <creation@86@mail.ru>"]
readme = "README.md"
packages = [{include = "first_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
